First release of MinecraftEvents Added messages.yml and plugin.yml Added Java 1.8 compatibility Merged every module in the main plugin Fixed python script bug